--- a/Report/uu_cern_thesis_report.tex
+++ b/Report/uu_cern_thesis_report.tex
@@ -160,6 +160,7 @@ Particle accelerators accelerate charged particles to high velocities using magn
 	\caption{Simplified schematic of a circular particle accelerator with the crucial functional parts labeled.}
 	\label{fig_part_accel_schematic}
 \end{figure}
+\textcolor{red}{TODO: add reference}
 
 Particle accelerators can be circular or linear. Figure \ref{fig_part_accel_schematic} depicts a circular accelerator, which consists of the following parts:
 \begin{itemize}
@@ -184,7 +185,7 @@ Linear accelerators contain the same functional elements as circular ones, but t
 Colliders have two beams right next to each-other, but the particles are revolving in the opposite directions. This is achieved either by having two beam pipes (as in the LHC) or the two beams sharing the same beam pipe (like in LEP). At some specific points, the beams are crossed and the bunches collide with each other. It is important to mention that even though a bunch contains about $1.2\cdot 10^11$ protons\cite{lhc_facts_and_figures} in case of the LHC, the protons are so small thus the bunch is so sparse that only about 40 proton-proton collisions occur (in case of the ATLAS experiment) per bunch collision.
 
 
-\subsection{The accelerator complex}\label{sec_accel_complex}
+\subsection{The accelerator complex}\label{sec_accel_complex}\textcolor{red}{TODO: try to add a ref}
 
 \begin{figure}[H]
 	\includegraphics[width=\textwidth]{accelerator_complex}
@@ -205,6 +206,7 @@ The LHC, shown in dark blue, is the subject of this thesis project. The LHC is a
 	\caption{Side view of the LHCb detector.}
 	\label{fig_lhcb_geometry}
 \end{figure}
+TODO: ref
 
 Figure \ref{fig_lhcb_geometry} shows the LHCb detector from the side, the two beams of the LHC go in the horizontal direction on the drawing, through the middle of the detector. The detector is both vertically and horizontally symmetric to the beampipe.
 
@@ -222,6 +224,7 @@ The LHCb detector's coordinate system is used for calculations. The Z axis point
 	\caption{The different coordinate systems used in the LHCb cavern.}
 	\label{fig_lhcb_coordinate_systems}
 \end{figure}
+TODO: ref
 
 
 \subsubsection{Operating principles}\label{sec_lhcb_det_theory}
@@ -231,6 +234,7 @@ The LHCb detector's coordinate system is used for calculations. The Z axis point
 	\caption{Particles created in a real collision and their interaction with the detector.}
 	\label{fig_lhcb_lbevent_collision}
 \end{figure}
+TODO:ref
 
 
 Figure \ref{fig_lhcb_lbevent_collision} shows one particle collision event's results. The particles that were born in the collision are shown by the orange lines. The three aforementioned detectors, the VELO, UT and FT, can be identified by the origin of the orange particles, the pink cloud of lines and the bright blue cloud lines, respectively. The green and yellow cubic illustrations on the far-end of the detector belong to other sub-detectors, and are out of the scope of this paper.
@@ -244,8 +248,9 @@ The VELO is a small detector, it measures less than a meter in length. It is a s
 	\caption{The 26 layers of one half of the VELO. The pixels reside on the silver area, the PCB around contains the reading electronics, and the wedge at the top-center of the silver area is where the beam passes through.}
 	\label{fig_detector_velo_real}
 \end{figure}
+TODO: ref
 
-The UT is a silicon strip detector which consists of long fibers which act much like a pixel as they also signal if a particle passes through them at any point along their length. A fiber of the UT is generally 10 centimeters long, and has a width of only 192 micrometers. This means that while on one axis, the particles position can be told with great accuracy, on the other axis the uncertainty if 10 centimeters. The entire detector measures about 1.7 meters in width and 1.4 meter in height.
+The UT (see \ref{fig_detector_ut_ft_drawing}) is a silicon strip detector which consists of long fibers which act much like a pixel as they also signal if a particle passes through them at any point along their length. A fiber of the UT is generally 10 centimeters long, and has a width of only 192 micrometers. This means that while on one axis, the particles position can be told with great accuracy, on the other axis the uncertainty if 10 centimeters. The entire detector measures about 1.7 meters in width and 1.4 meter in height.
 
 Similarly to the UT, the FT is also a silicon strip detector, but the length of its fibers is 2.5 meters. This means the 5 meter tall detector needs only two fibers to cover the full height.
 
@@ -256,6 +261,7 @@ Similarly to the UT, the FT is also a silicon strip detector, but the length of 
 	\caption{The UT in purple and the FT in blue, with a person next to them to illustrate the scale. The silicon strips are aligned vertically, leading to a good horizontal resolution but a poor vertical resolution.}
 	\label{fig_detector_ut_ft_drawing}
 \end{figure}
+TODO: ref
 
 In between the UT and the FT, a strong magnet is placed which bends the particles on the horizontal axis.
 
